--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: babbuddy-dev
+    name: flow-dev
 
   aot:
     enabled: false  # AOT 비활성화 설정 추가
@@ -15,7 +15,7 @@ spring:
     password: ${MYSQL_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
   servlet:
     multipart:
@@ -23,32 +23,6 @@ spring:
       max-request-size: 30MB
       max-file-size: 30MB
 
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD}
-
-jwt:
-  secret: ${JWT_SECRET}
-  access-expiration: ${JWT_ACCESS_EXPIRATION}
-  refresh-expiration: ${JWT_REFRESH_EXPIRATION}
-
-#cloud:
-#  aws:
-#    stack:
-#      auto: false
-#    s3:
-#      bucket: ${S3_BUCKET}
-#    region:
-#      static: ${S3_REGION}
-#    credentials:
-#      accessKey: ${S3_ACCESS_KEY}
-#      secretKey: ${S3_SECRET_KEY}
-
-#kakao:
-#  pay:
-#    admin-key: ${PAY_SECRET_KEY}
-#    cid: ${PAY_CLIENT}
 
 logging:
   level:
@@ -59,7 +33,6 @@ logging:
 
 
 oauth2:
-  front-uri: ${OAUTH2_FRONT_URL}
   base-url: ${OAUTH2_BASE_URL}
   client-name: ${OAUTH2_CLIENT_NAME}
   client-id: ${OAUTH2_CLIENT_ID}
