--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: babbuddy-prod
+    name: flow-prod
 
   config:
     import:
@@ -20,33 +20,6 @@ spring:
       max-request-size: 30MB
       max-file-size: 30MB
 
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD}
-
-jwt:
-  secret: ${JWT_SECRET}
-  access-expiration: ${JWT_ACCESS_EXPIRATION}
-  refresh-expiration: ${JWT_REFRESH_EXPIRATION}
-
-#cloud:
-#  aws:
-#    stack:
-#      auto: false
-#    s3:
-#      bucket: ${S3_BUCKET}
-#    region:
-#      static: ${S3_REGION}
-#    credentials:
-#      accessKey: ${S3_ACCESS_KEY}
-#      secretKey: ${S3_SECRET_KEY}
-
-#kakao:
-#  pay:
-#    admin-key: ${PAY_SECRET_KEY}
-#    cid: ${PAY_CLIENT}
-
 logging:
   level:
     root: INFO
@@ -55,7 +28,6 @@ logging:
         web: ERROR
 
 oauth2:
-  front-uri: ${OAUTH2_FRONT_URL}
   base-url: ${OAUTH2_BASE_URL}
   client-name: ${OAUTH2_CLIENT_NAME}
   client-id: ${OAUTH2_CLIENT_ID}
